# python-docx-ng

./: HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-publish.yml
docs/: README.md
docs/examples/: README.md
docs/examples/basic_document/: basic_document.docx  basic_document.py
docs/snippets/: README.md  comment.py  deactivate_spellchecking.py  document_properties.py  footnote.py  language_specification.py
docx/: __init__.py  api.py  blkcntnr.py  document.py  table.py
docx/image/: __init__.py  constants.py  emf.py  wmf.py
docx/opc/: extendedprops.py  package.py  phys_pkg.py
docx/opc/parts/: extendedprops.py
docx/oxml/: __init__.py  comment.py  document.py  extendedprops.py  footnote.py  ns.py  numbering.py  shape.py  styles.py  table.py  xmlchemy.py
docx/oxml/text/: font.py  paragraph.py  parfmt.py  run.py
docx/parts/: comment.py  document.py  footnote.py  story.py
docx/templates/: default-footnotes.xml  default-styles.xml  default.docx
docx/templates/default-docx-template/docProps/: core.xml
docx/templates/default-docx-template/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
docx/text/: comment.py  font.py  paragraph.py  parfmt.py  run.py
