[tool.poetry]
name = "python-docx-ng"
version = "0.9.4-dev"
description = "python-docx-ng is a Python library for creating and updating Microsoft Word (.docx) files."
authors = ["toxicphreAK <pentesting.laboratories@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docx"}]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
