[tool.poetry]
name = "python-docx-ng"
version = "0.9.7"
description = "python-docx-ng is a Python library for creating and updating Microsoft Word (.docx) files."
authors = ["toxicphreAK <pentesting.laboratories@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docx"}]

[project.urls]
homepage = "https://github.com/toxicphreAK/python-docx-ng"
documentation = "https://github.com/toxicphreAK/python-docx-ng/tree/master/docs"
changelog = "https://github.com/toxicphreAK/python-docx-ng"
"Homepage" = "https://github.com/toxicphreAK/python-docx-ng"
"Bug Tracker" = "https://github.com/toxicphreAK/python-docx-ng/issues"

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
